--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^1.12.3"
   },
   "scripts": {
