--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html"
   },
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "keywords": [],
   "author": "Myles Enriquez",
   "license": "ISC"
